src/test/resources/example/cocos/invalid/invalidTypes.ocl
import example.CDs.AuctionCD.*;
import example.CDs.DefaultTypes.*;

ocl invalidTypes {
  inv Test :
     10 == 10m;
  inv Test :
    "name" == Set{"name"}
}
